Fix overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ ul>li:hover::marker {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 4px;
 }
 
 #network > a {
